--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     }
   ],
   "homepage": "https://github.com/duckster2506/process-analyzer",
+  "require": {
+    "php": ">=8.0"
+  },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.35",
     "phpunit/phpunit": "10",
@@ -33,7 +36,7 @@
   },
   "scripts": {
     "psalm": "vendor/bin/psalm -c psalm.xml",
-    "test": "vendor/bin/phpunit",
+    "test": "vendor/bin/phpunit --testsuite=Suite --testdox --colors=always",
     "test-coverage": "vendor/bin/phpunit --coverage-html=build"
   }
 }
