--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.35",
     "phpunit/phpunit": "10",
-    "vimeo/psalm": "^6.0@dev"
+    "vimeo/psalm": "^6.0@dev",
+    "phpbench/phpbench": "^1.2@dev"
   },
   "minimum-stability": "dev",
   "autoload": {
