Update composer.json and Printer
Add onEachRecordString hook to Printer

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Dependency free process analyzer for PHP",
   "license": "MIT",
   "keywords": [
-    "duckster2506",
+    "duckstery",
     "analyzer",
     "process",
     "process-analyzer"
